--- a/src/index.css
+++ b/src/index.css
@@ -643,6 +643,14 @@ body {
   bottom: 0px;
 }
 
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
+.bottom-\[120px\] {
+  bottom: 120px;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -663,20 +671,20 @@ body {
   top: 1rem;
 }
 
-.bottom-6 {
-  bottom: 1.5rem;
-}
-
-.bottom-\[120px\] {
-  bottom: 120px;
-}
-
 .z-50 {
   z-index: 50;
 }
 
 .z-\[99999999\] {
   z-index: 99999999;
+}
+
+.z-\[999999\] {
+  z-index: 999999;
+}
+
+.z-\[2147483647\] {
+  z-index: 2147483647;
 }
 
 .mx-auto {
@@ -692,20 +700,34 @@ body {
   margin-top: 6rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
+}
+
+.mt-\[4px\] {
+  margin-top: 4px;
 }
 
 .mt-auto {
   margin-top: auto;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .inline {
@@ -720,12 +742,20 @@ body {
   display: grid;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-2 {
   height: 0.5rem;
 }
 
 .h-4 {
   height: 1rem;
+}
+
+.h-\[16px\] {
+  height: 16px;
 }
 
 .h-\[28px\] {
@@ -740,6 +770,10 @@ body {
   height: 36px;
 }
 
+.h-\[44px\] {
+  height: 44px;
+}
+
 .h-auto {
   height: auto;
 }
@@ -748,12 +782,20 @@ body {
   height: 100%;
 }
 
-.h-\[16px\] {
-  height: 16px;
+.h-screen {
+  height: 100vh;
 }
 
-.h-\[44px\] {
-  height: 44px;
+.h-\[1000px\] {
+  height: 1000px;
+}
+
+.h-\[50px\] {
+  height: 50px;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-3\/4 {
@@ -768,6 +810,10 @@ body {
   width: 100px;
 }
 
+.w-\[16px\] {
+  width: 16px;
+}
+
 .w-\[28px\] {
   width: 28px;
 }
@@ -776,16 +822,50 @@ body {
   width: 32px;
 }
 
+.w-\[44px\] {
+  width: 44px;
+}
+
+.w-\[60\%\] {
+  width: 60%;
+}
+
 .w-\[75px\] {
   width: 75px;
 }
 
-.w-\[16px\] {
-  width: 16px;
+.w-full {
+  width: 100%;
 }
 
-.w-\[90\%\] {
-  width: 90%;
+.w-screen {
+  width: 100vw;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[40\%\] {
+  width: 40%;
+}
+
+.min-w-\[400px\] {
+  min-width: 400px;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  animation: spin 1s linear infinite;
 }
 
 .cursor-pointer {
@@ -802,6 +882,10 @@ body {
 
 .flex-col-reverse {
   flex-direction: column-reverse;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-end {
@@ -836,6 +920,26 @@ body {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.overflow-auto {
+  overflow: auto;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+
+.overscroll-contain {
+  overscroll-behavior: contain;
 }
 
 .rounded-full {
@@ -879,6 +983,15 @@ body {
   background-color: rgb(0 0 0 / 0.8);
 }
 
+.bg-black\/\[\.5\] {
+  background-color: rgb(0 0 0 / .5);
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
 .bg-muted {
   background-color: hsl(var(--muted));
 }
@@ -888,9 +1001,22 @@ body {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500 {
+.bg-green-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.5\)\] {
+  background-color: rgba(0,0,0,0.5);
+}
+
+.fill-blue-600 {
+  fill: #2563eb;
 }
 
 .p-4 {
@@ -901,8 +1027,30 @@ body {
   padding: 1.5rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.pb-\[70px\] {
+  padding-bottom: 70px;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-\[12px\] {
+  font-size: 12px;
 }
 
 .text-lg {
@@ -915,16 +1063,17 @@ body {
   line-height: 1.25rem;
 }
 
-.text-\[12px\] {
-  font-size: 12px;
-}
-
-.font-semibold {
-  font-weight: 600;
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .leading-none {
@@ -944,13 +1093,18 @@ body {
   color: hsl(var(--foreground));
 }
 
-.text-muted-foreground {
-  color: hsl(var(--muted-foreground));
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-muted-foreground {
+  color: hsl(var(--muted-foreground));
 }
 
 .text-white {
@@ -971,6 +1125,12 @@ body {
 .shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1018,14 +1178,24 @@ body {
   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
 .hover\:bg-blue-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(147 197 253 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-slate-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-slate-100:hover {
@@ -1138,6 +1308,11 @@ body {
 
 .data-\[state\=open\]\:duration-500[data-state=open] {
   animation-duration: 500ms;
+}
+
+.dark\:text-gray-600:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
